--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,13 @@ video_extensions = .mp4, .avi, .mov, .mkv
 max_folder_age_days = 7
 
 [VideoProcessing]
+# 检测算法: 'ssim' (结构相似性) 或 'histogram' (直方图比较) 或 'pixel_diff' (像素差异)
+detection_algorithm = ssim
 # SSIM相似度阈值，低于此值认为有画面变化
 ssim_threshold = 0.90
+# 直方图比较阈值，高于此值认为有画面变化 (0-1.0)
+histogram_threshold = 0.15
+# 像素差异阈值，高于此值认为有画面变化 (0-255)
+pixel_diff_threshold = 30
 # 视频采样间隔（秒）
 sample_interval_sec = 2
