--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ source_dir = source
 target_dir = dst
 # 视频文件扩展名
 video_extensions = .mp4, .avi, .mov, .mkv
-# 子文件夹最大保留天数
-max_folder_age_days = 7
+# 空目录最大保留天数
+empty_folder_age_days = 3
 
 [VideoProcessing]
 # 检测算法: 'ssim' (结构相似性) 或 'histogram' (直方图比较) 或 'pixel_diff' (像素差异)
