添加dst的清理脚本

--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,10 @@ source_dir = source
 target_dir = dst
 # 视频文件扩展名
 video_extensions = .mp4, .avi, .mov, .mkv
-# 空目录最大保留天数
+# （清理src和dst使用）空目录最大保留天数
 empty_folder_age_days = 3
+# (清理dst使用）文件最大保留天数
+file_age_days = 7
 
 [VideoProcessing]
 # 检测算法: 'ssim' (结构相似性) 或 'histogram' (直方图比较) 或 'pixel_diff' (像素差异)
