支持指定大小文件筛选

--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ file_age_days = 7
 
 [VideoProcessing]
 # 检测算法: 'ssim' (结构相似性) 或 'histogram' (直方图比较) 或 'pixel_diff' (像素差异)
-detection_algorithm = ssim
+detection_algorithm = histogram
 # SSIM相似度阈值，低于此值认为有画面变化
 ssim_threshold = 0.90
 # 直方图比较阈值，高于此值认为有画面变化 (0-1.0)
@@ -20,6 +20,8 @@ histogram_threshold = 0.15
 # 像素差异阈值，高于此值认为有画面变化 (0-255)
 pixel_diff_threshold = 30
 # 视频采样间隔（秒）
-sample_interval_sec = 2
+sample_interval_sec = 8
 # 并行处理的最大工作进程数
-max_workers = 2
+max_workers = 1
+# 只处理指定大小的文件（单位M），用逗号分隔，为空则不限制
+allowed_sizes_mb = 128
